# envcheck

./: README.md  pyproject.toml
envcheck/: __init__.py  checker.py  cli.py  parser.py
tests/: test_checker.py  test_cli.py  test_parser.py
